# ascf_brush

./: .gitignore  README.md  generate_brush_data.py  main.py  pyproject.toml
ascf_brush/: __init__.py  ascf_brush.py
asf_brush/: __init__.py  ascf_brush.py
data/: data_m_5_n_0_p_100_factor_0.1.txt  data_m_5_n_0_p_100_factor_0.2.txt  data_m_5_n_0_p_100_factor_0.3.txt  data_m_5_n_0_p_100_factor_0.4.txt  data_m_5_n_0_p_100_factor_0.5.txt  data_m_5_n_0_p_100_factor_0.6.txt  data_m_5_n_0_p_100_factor_0.7.txt  data_m_5_n_0_p_100_factor_0.8.txt  data_m_5_n_0_p_100_factor_0.9.txt  data_m_5_n_15_p_100_factor_0.1.txt  data_m_5_n_15_p_100_factor_0.2.txt  data_m_5_n_15_p_100_factor_0.3.txt  data_m_5_n_15_p_100_factor_0.4.txt  data_m_5_n_15_p_100_factor_0.5.txt  data_m_5_n_15_p_100_factor_0.6.txt  data_m_5_n_15_p_100_factor_0.7.txt  data_m_5_n_15_p_100_factor_0.8.txt  data_m_5_n_15_p_100_factor_0.9.txt  data_m_5_n_40_p_100_factor_0.1.txt  data_m_5_n_40_p_100_factor_0.2.txt  data_m_5_n_40_p_100_factor_0.3.txt  data_m_5_n_40_p_100_factor_0.4.txt  data_m_5_n_40_p_100_factor_0.5.txt  data_m_5_n_40_p_100_factor_0.6.txt  data_m_5_n_40_p_100_factor_0.7.txt  data_m_5_n_40_p_100_factor_0.8.txt  data_m_5_n_40_p_100_factor_0.9.txt  data_m_5_n_75_p_100_factor_0.1.txt  data_m_5_n_75_p_100_factor_0.2.txt  data_m_5_n_75_p_100_factor_0.3.txt  data_m_5_n_75_p_100_factor_0.4.txt  data_m_5_n_75_p_100_factor_0.5.txt  data_m_5_n_75_p_100_factor_0.6.txt  data_m_5_n_75_p_100_factor_0.7.txt  data_m_5_n_75_p_100_factor_0.8.txt  data_m_5_n_75_p_100_factor_0.9.txt
materials/: Amoskov_dissertation(rus).djvu
