[tool.poetry]
name = "asf-brush"
version = "0.1.0"
description = ""
authors = ["Ivan Mikhailov <mikhailov.ivan@gmail.com>"]
readme = "README.md"
packages = [{include = "asf_brush"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.0"
scipy = "^1.14.1"


[tool.poetry.group.def.dependencies]
black = "^24.10.0"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
